# observatorio

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: run_bcra.sh  run_ingesta.sh
sql/: 01_schema.sql
sql/seeds/: 01_fuentes.sql  02_fuentes_bcra.sql
src/observatorio/: db.py
src/observatorio/ingesta/: base.py  bcra.py  dolares.py
