[project]
name = "observatorio"

version = "0.1.0"

description = "Pipeline de ingesta y análisis de indicadores económicos argentinos"

readme = "README.md"

requires-python = ">=3.11"

authors = [{name = "justo celsi" }]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/observatorio"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = []
